--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>My App</title>
-        <meta name="description" content="My App">
-        <meta name="author" content="Kory Prince <korylprince@gmail.com>">
+        <title>Cuspis</title>
+        <meta name="description" content="Cuspis">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
         <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
